--- a/client/index.html
+++ b/client/index.html
@@ -23,8 +23,8 @@
         <div class="row justify-content-center mt-5">
             <div class="shadow p-4 mb-5 bg-white rounded">
                 <center>
-                    <img src="assets/img/icon_kanban.png" alt="kanban" class="img-fluid" width="150px"><br><br>
-                    <h5><b>Login First</b></h5>
+                    <img src="assets/img/icon_kanban.png" alt="kanban" class="img-fluid" width="180px"><br><br>
+                    <h5><b>Welcome to Hacktiv8 Kanban!</b></h5><br>
                 </center>
                 <form>
                     <div class="form-group">
