--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-signin-client_id" content="369062318650-p3g3fgnvfshi2ql9gk4pdm3ratrp3ag8.apps.googleusercontent.com">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -15,6 +16,7 @@
   <body>
     <div id="app">
     </div>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="src/main.js"></script>
   </body>
 </html>
